--- a/Sagittaras.Repository.Test/Sagittaras.Repository.Test.csproj
+++ b/Sagittaras.Repository.Test/Sagittaras.Repository.Test.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
         <PackageReference Include="FluentAssertions" Version="6.6.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.17" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
