--- a/Sagittaras.Repository/Sagittaras.Repository.csproj
+++ b/Sagittaras.Repository/Sagittaras.Repository.csproj
@@ -15,6 +15,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
+      <PackageReference Include="System.Linq.Async" Version="6.0.1" />
     </ItemGroup>
 
 </Project>
