--- a/Sagittaras.Repository/Sagittaras.Repository.csproj
+++ b/Sagittaras.Repository/Sagittaras.Repository.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Title>Sagittaras Repository Pattern</Title>
@@ -11,10 +11,11 @@
         <PackageLicenseUrl>https://github.com/sagittaras/repository/blob/master/LICENSE</PackageLicenseUrl>
         <RepositoryUrl>https://github.com/sagittaras/repository</RepositoryUrl>
         <Version>2.1.0</Version>
+        <LangVersion>12</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
     </ItemGroup>
 
 </Project>
