--- a/Sagittaras.Repository.Projection.AutoMapper/Sagittaras.Repository.Projection.AutoMapper.csproj
+++ b/Sagittaras.Repository.Projection.AutoMapper/Sagittaras.Repository.Projection.AutoMapper.csproj
@@ -1,21 +1,24 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Title>Sagittaras Repository Pattern</Title>
+        <Title>Sagittaras Repository AutoMapper Adapter</Title>
         <Authors>Sagittaras Games</Authors>
+        <Description>Adapter for query projection with usage of AutoMapper.</Description>
         <Copyright>Sagittaras Games</Copyright>
         <PackageProjectUrl>https://github.com/sagittaras/repository</PackageProjectUrl>
         <PackageLicenseUrl>https://github.com/sagittaras/repository/blob/master/LICENSE</PackageLicenseUrl>
         <RepositoryUrl>https://github.com/sagittaras/repository</RepositoryUrl>
-        <Version>3.0.0</Version>
-        <LangVersion>12</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
+      <ProjectReference Include="..\Sagittaras.Repository\Sagittaras.Repository.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="13.0.1" />
     </ItemGroup>
 
 </Project>
