--- a/Sagittaras.Repository.Tests.Projection.AutoMapper/Sagittaras.Repository.Tests.Projection.AutoMapper.csproj
+++ b/Sagittaras.Repository.Tests.Projection.AutoMapper/Sagittaras.Repository.Tests.Projection.AutoMapper.csproj
@@ -7,6 +7,7 @@
 
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
+        <UserSecretsId>2632d97c-9e82-4cbb-b0cc-5e222e8f4fab</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
